--- a/index.qmd
+++ b/index.qmd
@@ -4,15 +4,12 @@ image: profile.jpg
 about:
   template: jolla
   links:
-    - icon: twitter
-      text: Twitter
-      href: https://twitter.com
     - icon: linkedin
       text: LinkedIn
-      href: https://linkedin.com
+      href: https://www.linkedin.com/in/miluu/
     - icon: github
       text: Github
-      href: https://github.com
+      href: https://github.com/mluu921
 ---
 
 About this blog
