--- a/index.qmd
+++ b/index.qmd
@@ -10,26 +10,34 @@ about:
     - icon: github
       text: Github
       href: https://github.com/mluu921
+    - icon: card-text
+      text: Curriculum Vitae
+      href: https://github.com/mluu921/cv/blob/master/michael_luu-cv/michael_luu-cv.pdf
 ---
 
 # Education
 
-### MPH in Biostatistics & Epidemiology, 2015 
+### MPH in Biostatistics & Epidemiology, 2015
+
 University of Southern California, Keck School of Medicine
 
 ### BSc in Biological Sciences, 2009
+
 University of California, Irvine
 
 # Experience
 
 ### Research Biostatistician II
+
 | Cedars-Sinai Samuel Oschin Comprehensive Cancer Center
-| Nov 2016 – Present
+| Nov 2016 -- Present
 
 ### Research Biostatistician I
-| Children’s Hospital Los Angles, Anesthesia Critical Care Medicine
-| Mar 2016 – Nov 2016
+
+| Children's Hospital Los Angles, Anesthesia Critical Care Medicine
+| Mar 2016 -- Nov 2016
 
 ### Quality Improvement Analyst
-| Children’s Hospital Los Angles, Neonatology
-| Jul 2015 – Nov 2016
+
+| Children's Hospital Los Angles, Neonatology
+| Jul 2015 -- Nov 2016
